[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/jam_game_art.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Enemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 24 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 5 )

[node name="SmartEnemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -24 )
scale = Vector2( 3, 3 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -24 )
shape = SubResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 1.90735e-06, -5.26028 )
scale = Vector2( 0.6, 0.657534 )
rect = Rect2( -40, -65, 80, 73 )

[node name="stompDetector" type="Area2D" parent="."]
modulate = Color( 0.631373, 0.988235, 0.407843, 1 )
position = Vector2( 0, -53 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="stompDetector"]
shape = SubResource( 4 )

[node name="fallCheck" type="RayCast2D" parent="."]
position = Vector2( -32, -38 )
enabled = true
collision_mask = 4

[node name="fallCheck2" type="RayCast2D" parent="."]
position = Vector2( 32, -38 )
enabled = true
collision_mask = 4

[connection signal="body_entered" from="stompDetector" to="." method="_on_stompDetector_body_entered"]
